fixed swagger docs and improved save/read/etc
